# gameflix

./: .env  app.py  main.py  pyproject.toml  requirements.txt
managers/: game.py  manager.py  user.py
models/: comment.py  game.py  model.py  user.py
querying/: Filter.py
