[tool.poetry]
name = "gameflix"
version = "0.1.0"
description = "Small project just to learn FastApi, pymongo, poetry etc"
authors = ["anietog <anieto687@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "1.0.0"
pymongo = "^4.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
